# ekonom_lib

./: CMakeLists.txt  README.md
source/: main.cpp  pch.cpp  pch.hpp
source/private/: ekonom.cpp
source/private/terminal/: terminal.cpp
source/private/terminal/connections/: serial_connection.cpp  tcpip_connection.cpp
source/private/terminal/protocols/: ecr2_protocol.cpp
source/public/: ekonom.hpp
source/public/terminal/: terminal.hpp
source/public/terminal/connections/: serial_connection.hpp  tcpip_connection.hpp
source/public/terminal/protocols/: ecr2_protocol.hpp
